cmake_minimum_required(VERSION 3.10)
project (pluginlib)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INCLUDE_CURRENT_DIR OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(cmake/dirlist.cmake)

# 生成物出力先
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # .so
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


ADD_FILES("${PROJECT_SOURCE_DIR}/external" "c" SOURCE_FILES)
ADD_FILES("${PROJECT_SOURCE_DIR}/external" "h" HEADER_FILES)
ADD_FILE_DIRECTORIES("${PROJECT_SOURCE_DIR}/external" "h" HEADER_DIRS)

ADD_FILES("${PROJECT_SOURCE_DIR}/src" "cpp" SOURCE_FILES)
ADD_FILES("${PROJECT_SOURCE_DIR}/src" "hpp" HEADER_FILES)
ADD_FILE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "hpp" HEADER_DIRS)

add_subdirectory(example)
